--- a/instagram/gram/templates/navbar.html
+++ b/instagram/gram/templates/navbar.html
@@ -15,6 +15,21 @@
                    Instagram
                 </a>
             </div>
+            <!-- Adding a search form  -->
+            <div class="col-sm-4 col-md-4 navbar-right">
+
+                <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search User" name="search">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+            <!-- search form end -->
         </div>
     </nav>
 </body>
