--- a/instagram/gram/templates/all-grams/search_results.html
+++ b/instagram/gram/templates/all-grams/search_results.html
@@ -11,11 +11,11 @@
 
 <div class="row">
 
-    {% if found_users %} {% for user in found_users %}
+    {% if found_users %} {% for found_user in found_users %}
     <div class="col-sm-6 col-md-3">
-        <img src="{{user.profile_photo.url}}" class="img-responsive" alt='Image'>
-        <a href="{% url 'single_user' user.id %}"></a>
-        <h5>{{user.bio}}</h5>
+        <img src="{{found_user.profile_photo.url}}" class="img-responsive" alt='Image'>
+        <a href="{% url 'single_user' found_user.id %}">View User</a>
+        <h5>{{found_user.bio}}</h5>
     </div>
     {% endfor %} {% endif %}
 </div>
