--- a/instagram/gram/templates/all-grams/post.html
+++ b/instagram/gram/templates/all-grams/post.html
@@ -1,2 +1,13 @@
 {% extends 'all-grams/base.html'%} {% block content %} {{block.super}}
-<i class="fa fa-instagram" aria-hidden="true"></i> upload {% endblock %}
+<i class="fa fa-instagram" aria-hidden="true"></i>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <input type="file" name="myfile">
+    <button type="submit">Upload</button>
+</form>
+
+{% if uploaded_file_url %}
+<p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+{% endif %}
+
+<p><a href="{% url 'timeline' %}">Return to home</a></p> {% endblock %}
