--- a/instagram/gram/templates/all-grams/post.html
+++ b/instagram/gram/templates/all-grams/post.html
@@ -1,13 +1,17 @@
-{% extends 'all-grams/base.html'%} {% block content %} {{block.super}}
-<i class="fa fa-instagram" aria-hidden="true"></i>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
-</form>
+{% extends 'all-grams/base.html'%} {% load staticfiles%}{% load bootstrap3 %} {% block content %} {{block.super}}
+<div class="container">
+    <i class="fa fa-instagram" aria-hidden="true"></i>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %} {% bootstrap_form form%}
+        <input type="submit" class="btn btn-primary btn-sm" value="Submit">
+        <input type="hidden" name="next" value="{{next}}">
 
-{% if uploaded_file_url %}
-<p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-{% endif %}
+    </form>
 
-<p><a href="{% url 'timeline' %}">Return to home</a></p> {% endblock %}
+    {% if uploaded_file_url %}
+    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
+    {% endif %}
+
+    <p><a href="{% url 'timeline' %}">Return to home</a></p>
+</div>
+{% endblock %}
