--- a/instagram/gram/templates/profile/update_profile.html
+++ b/instagram/gram/templates/profile/update_profile.html
@@ -1,1 +1,12 @@
-{%extends 'profile/base.html'%}{%block content%} update {%endblock%}
+{%extends 'profile/base.html'%}{% load staticfiles%}{% load bootstrap3 %} {%block content%}
+<div class="container">
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %} {% bootstrap_form form%}
+        <input type="submit" class="btn btn-primary btn-sm" value="Submit">
+        <input type="hidden" name="next" value="{{next}}">
+
+    </form>
+    <p><a href="{% url 'timeline' %}">Back</a></p>
+</div>
+
+{% endblock %}
