--- a/instagram/gram/templates/profile/profile.html
+++ b/instagram/gram/templates/profile/profile.html
@@ -1,15 +1,14 @@
 {%extends 'profile/base.html'%}{% block content %}
 
 <div class="container">
+    {% if profile %}
     <img src={{profile.profile_photo.url}} style="float:left">
 
     <p>{{profile.bio}}</p>
+    {% endif %} {% if profile.user == current_user%}
+    <a href="{% url 'update_profile'%}">Update Profile</a> {% else%}
+    <h3>Profile has not been created yet</h3>
+    {% endif %}
 
-    {% if profile.user == current_user%}
-    <a href="{% url 'update_profile'%}">Update Profile</a> {% endif %}
 </div>
-
-
-
-
 {% endblock %} profile_photo = models.ImageField(upload_to="images/",null = True) bio = models.TextField(default='',blank=True) user
