make changes to the search functionality to search users with profile names

--- a/instagram/gram/templates/all-grams/single.html
+++ b/instagram/gram/templates/all-grams/single.html
@@ -5,12 +5,8 @@
     <div class="row">
         <img src="{{user.profile_photo.url}}" class="img-responsive" alt="">
     </div>
-
     <div class="row">
-        <h1 class="text-center">{{user.id}}</h1>
-    </div>
-
-    <div class="row">
+        <h5>{{user.username}}</h5>
         <p>{{user.bio}}</p>
     </div>
 
