--- a/instagram/gram/templates/navbar.html
+++ b/instagram/gram/templates/navbar.html
@@ -24,6 +24,9 @@
             <a href="{% url 'post' %}" id="instTitle" style="float:right; margin-right:10px;">
                      Post
             </a>
+            <a href="{% url 'profile' %}" id="instTitle" style="float:right; margin-right:10px;">
+                    Profile
+           </a>
 
             <!-- Adding a search form  -->
             <form class="navbar-form" role="search" action="{% url 'search_results' %}">
