--- a/instagram/gram/templates/all-grams/search_results.html
+++ b/instagram/gram/templates/all-grams/search_results.html
@@ -13,9 +13,14 @@
 
     {% if found_users %} {% for found_user in found_users %}
     <div class="col-sm-6 col-md-3">
-        <img src="{{found_user.profile_photo.url}}" class="img-responsive" alt='Image'>
-        <a href="{% url 'single_user' found_user.id %}">View User</a>
-        <h5>{{found_user.bio}}</h5>
+
+        <a href="{% url 'single_user' found_user.id %}">
+            <img src="{{found_user.profile_photo.url}}" class="img-responsive" alt='Image'>
+        </a>
+        <a href="{% url 'single_user' found_user.id %}">
+            <h5>{{found_user.username}}</h5>
+        </a>
+
     </div>
     {% endfor %} {% endif %}
 </div>
