--- a/instagram/gram/templates/all-grams/timeline.html
+++ b/instagram/gram/templates/all-grams/timeline.html
@@ -21,7 +21,7 @@
                 <a href="{% url 'more' image.id %}"><img src={{image.image.url}} id="timeline_image" style="width:100%;">
                 </a>
                 <div style="margin:10px;">
-                    <span class="glyphicon glyphicon-heart" style="font-size:30px;" id='like_button'></span>&nbsp;&nbsp;&nbsp;
+                    <span class="glyphicon glyphicon-heart-empty" style="font-size:30px;" id='like_button'></span>&nbsp;&nbsp;&nbsp;
                     <span class="glyphicon glyphicon-edit" style="font-size:30px;"></span>
                     <span class="glyphicon glyphicon-bookmark" style="font-size:30px;float:right;"></span>
                     <hr> {%for like in likes%} {%if like.image == image%} total.likes like: 1{%else%}Likes:none {% endif %} {% endfor %}
