--- a/instagram/gram/templates/navbar.html
+++ b/instagram/gram/templates/navbar.html
@@ -24,9 +24,14 @@
             <a href="{% url 'post' %}" id="instTitle" style="float:right; margin-right:10px;">
                      Post
             </a>
-            <a href="{% url 'profile' %}" id="instTitle" style="float:right; margin-right:10px;">
-                    Profile
-           </a>
+
+            <a href="{% url 'profile' %}" id="instTitle" style="float:right; margin-right:10px; font-size:25px;">
+                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;&nbsp;
+            </a>
+            <a href="{% url 'profile' %}" id="instTitle" style="float:right; margin-right:10px;font-size:25px;">
+                <span class="glyphicon glyphicon-heart-empty"></span>&nbsp;&nbsp;&nbsp;
+            </a>
+            <a href="{% url 'viewProfiles' %}" style="float:right;">Tour</a>
 
             <!-- Adding a search form  -->
             <form class="navbar-form" role="search" action="{% url 'search_results' %}">
