--- a/instagram/gram/templates/profile/profile.html
+++ b/instagram/gram/templates/profile/profile.html
@@ -1,14 +1,27 @@
 {%extends 'profile/base.html'%}{% block content %}
 
 <div class="container">
-    {% if profile %}
-    <img src={{profile.profile_photo.url}} style="float:left">
-    <h5>{{profile.username}}</h5>
-    <p>{{profile.bio}}</p>
-    {% endif %} {% if profile.user == current_user%}
-    <a href="{% url 'update_profile'%}">Update Profile</a> {% else%}
-    <h3>Profile has not been created yet</h3>
-    {% endif %}
+
+    <div class='col-md-2'></div>
+    <div class='col-md-8'>
+        <div class="row">
+            <div class="col-md-6">
+                {% if profile %}
+                <img src={{profile.profile_photo.url}} style="float:left; height:300px; width:300px;">
+            </div>
+            <div class="col-md-6">
+                <h5 style="font-size:35px;">{{profile.username}}</h5>
+                <p>{{profile.bio}}</p>
+                {% endif %} {% if profile.user == current_user%}
+                <a href="{% url 'update_profile'%}">Update Profile</a> {% else%}
+                <h3>Profile has not been created yet</h3>
+                {% endif %}
+            </div>
+        </div>
+
+    </div>
+    <div class='col-md-2'></div>
+
 
 </div>
 {% endblock %} profile_photo = models.ImageField(upload_to="images/",null = True) bio = models.TextField(default='',blank=True) user
