--- a/instagram/gram/templates/profile/base.html
+++ b/instagram/gram/templates/profile/base.html
@@ -13,8 +13,9 @@
 
 </head>
 
-<body style="background-color:#f2f2f2;">
+<body>
     {% include "navbar.html" %} {% block content %} {%endblock%} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %} {% endblock %}
+
 </body>
