--- a/instagram/gram/templates/profile/all.html
+++ b/instagram/gram/templates/profile/all.html
@@ -8,8 +8,9 @@
         </div>
         <div class="row">
             <h5 style="font-size:35px;">{{profile.username}}</h5>
-            <p>{{profile.bio}}</p>
-            <a href="{% url 'follow' profile.id %}">Follow</a>
+            <a href="{% url 'follow' profile.id %}">
+                <button type="button" class="btn btn-primary">Follow </button>
+            </a>
         </div>
     </div>
     {% endfor %}
