--- a/instagram/gram/templates/all-grams/comment.html
+++ b/instagram/gram/templates/all-grams/comment.html
@@ -1,13 +1,17 @@
 {% extends 'all-grams/base.html'%} {% load staticfiles%}{% load bootstrap3 %} {% block content %} {{block.super}}
 <div class="container">
-    <i class="fa fa-instagram" aria-hidden="true"></i>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %} {% bootstrap_form form%}
-        <input type="submit" class="btn btn-primary btn-sm" value="Submit">
-        <input type="hidden" name="next" value="{{next}}">
+    <div class="col-sm-0 col-md-2"></div>
+    <div class=" col-sm-12 col-md-6">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %} {% bootstrap_form form%}
+            <input type="submit" class="btn btn-primary btn-sm" value="Submit">
+            <input type="hidden" name="next" value="{{next}}">
 
-    </form>
+        </form>
 
-    <p><a href="{% url 'timeline' %}">Return to Timeline</a></p>
+        <p><a href="{% url 'timeline' %}">Return to Timeline</a></p>
+
+    </div>
+    <div class="col-sm-0 col-md-4"></div>
 </div>
 {% endblock %}
