--- a/instagram/gram/templates/all-grams/search_results.html
+++ b/instagram/gram/templates/all-grams/search_results.html
@@ -1,27 +1,37 @@
 {% extends 'all-grams/base.html'%} {% block content %} {{block.super}}
 <i class="fa fa-instagram" aria-hidden="true"></i>
 <div class="row">
-    {% if found_users %}
-    <h2>Found {{ found_users|length }} of searched term {{message}}</h2>
-    {% else %}
-    <h2> Found 0 users for the search term {{message}}</h2>
-    {% endif %}
-
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+        {% if found_users %}
+        <h4>Found {{ found_users|length }} users with the name {{message}}</h2>
+            {% else %}
+            <h4> OOO0P! 0 users named {{message}}</h2>
+                {% endif %}
+    </div>
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
 </div>
 
 <div class="row">
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+        <div class="row">
+            {% if found_users %} {% for found_user in found_users %}
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 
-    {% if found_users %} {% for found_user in found_users %}
-    <div class="col-sm-6 col-md-3">
+                <a href="{% url 'single_user' found_user.id %}">
+                    <img src="{{found_user.profile_photo.url}}" class="img-responsive" alt='Image'>
+                </a>
+                <a href="{% url 'single_user' found_user.id %}">
+                    <h5>{{found_user.username}}</h5>
+                </a>
 
-        <a href="{% url 'single_user' found_user.id %}">
-            <img src="{{found_user.profile_photo.url}}" class="img-responsive" alt='Image'>
-        </a>
-        <a href="{% url 'single_user' found_user.id %}">
-            <h5>{{found_user.username}}</h5>
-        </a>
+            </div>
+            {% endfor %} {% endif %}
 
+        </div>
     </div>
-    {% endfor %} {% endif %}
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+
 </div>
 {% endblock %}
