--- a/instagram/gram/templates/all-grams/single_image.html
+++ b/instagram/gram/templates/all-grams/single_image.html
@@ -1,10 +1,19 @@
 {%extends 'all-grams/base.html'%} {% block content %}
 
 <div class="container">
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+    <div class="col-xs-10 col-sm-10 col-md-5 col-lg-5 col-xl-5">
+        <div class="row">
+            <img src="{{image.image}}" class="img-responsive" alt="">
+        </div>
 
-    <div class="row">
-        <img src="{{image.image}}" class="img-responsive" alt="">
     </div>
+    <div class="col-xs-10 col-sm-10 col-md-5 col-lg-5 col-xl-5">
+
+    </div>
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+
+
 
     <div class="row">
         <h1 class="text-center">{{image.id}}</h1>
