--- a/instagram/gram/templates/profile/profile.html
+++ b/instagram/gram/templates/profile/profile.html
@@ -5,20 +5,20 @@
     <div class='col-md-2'></div>
     <div class='col-md-8'>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 {% if profile %}
-                <img src={{profile.profile_photo.url}} style="float:left; height:300px; width:300px;">
+                <img src={{profile.profile_photo.url}} class="img-responsive img-rounded" style="float:left; height:300px; width:300px;">
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="padding:10px;">
                 <h5 style="font-size:35px;">{{profile.username}}</h5>
                 <p>{{profile.bio}}</p>
                 {% endif %} {% if profile.user == current_user%}
-                <a href="{% url 'update_profile'%}">Edit Profile</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="{% url 'update_profile'%}"><button class="btn btn-primary">Edit Profile</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="{% url 'post' %}">
                     <span class="glyphicon glyphicon-plus-sign" style="font-size:35px;"></span>
                 </a>
-                <h5>Followers:{{followers | length }}</h5>
-                <h5>Following:{{following | length }}</h5 {% else%} <h3>Profile has not been created yet</h3>
+                <h5><span style="font-weight:bolder;">Followers:&nbsp;&nbsp;&nbsp;</span>{{followers | length }}</h5>
+                <h5><span style="font-weight:bolder;">Following:&nbsp;&nbsp;&nbsp;</span>{{following | length }}</h5 {% else%} <h3>Profile has not been created yet</h3>
                 {% endif %}
                 <hr>
             </div>
