--- a/instagram/gram/templates/registration/login.html
+++ b/instagram/gram/templates/registration/login.html
@@ -24,6 +24,7 @@
                         <input type="hidden" name="next" value="{{next}}">
 
                     </form>
+                    <a href="{% url 'registration_register' %}">Sign Up</a>
 
                 </div>
 
