--- a/instagram/gram/templates/all-grams/timeline.html
+++ b/instagram/gram/templates/all-grams/timeline.html
@@ -31,6 +31,12 @@
                     <span class="glyphicon glyphicon-bookmark" style="font-size:30px;float:right;"></span>
                     <hr>
                     <h5 style="font-weight: bolder;">{{image.likes}} likes</h5>
+                    <div style="overflow: hidden; height:50px;">
+                        <h5>
+                            Just use overflow: auto.Not sure why this was downvoted, but I just upvoted it as it does go in the right direction, the other solutions didn't really work well in my case. overflow-x: hidden; + overflow-y: scroll; is what did the trick, along with the
+                            >100% width (110% in my case worked nicely).
+                        </h5>
+                    </div>
                     <h5>{{image.pub_date | timesince}} ago</h5>
                     <hr>
                     <a href="{% url 'comment' image.id %}">Add a comment...</a>
