--- a/instagram/gram/templates/all-grams/comment.html
+++ b/instagram/gram/templates/all-grams/comment.html
@@ -1,7 +1,12 @@
 {% extends 'all-grams/base.html'%} {% load staticfiles%}{% load bootstrap3 %} {% block content %} {{block.super}}
 <div class="container">
-    <div class="col-sm-0 col-md-2"></div>
-    <div class=" col-sm-12 col-md-6">
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+    <div class="col-xs-10 col-sm-10 col-md-5 col-lg-5 col-xl-5">
+        <h4 style="font-weight:bolder;">Comments</h4>
+        {% for comment in comments%}
+        <h5><span style="font-weight:bolder;">@{{comment.user_id}}:</span>&nbsp;&nbsp;{{comment}} </h5> {% endfor %}
+    </div>
+    <div class="col-xs-10 col-sm-10 col-md-5 col-lg-5 col-xl-5">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %} {% bootstrap_form form%}
             <input type="submit" class="btn btn-primary btn-sm" value="Submit">
@@ -12,6 +17,6 @@
         <p><a href="{% url 'timeline' %}">Return to Timeline</a></p>
 
     </div>
-    <div class="col-sm-0 col-md-4"></div>
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
 </div>
 {% endblock %}
